# only

./: .gitignore  CHANGELOG.md  Cargo.toml  Onlyfile  README.md
.github/workflows/: check.yml  release.yml
apps/web/: package.json
apps/web/public/: index.html
apps/web/src/: app.tsx  main.ts
apps/web/src/bridge/: index.ts
apps/web/src/editor/: index.ts
apps/web/src/graph/: index.ts
apps/web/src/panels/: index.ts
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  command.rs  compile.rs  discover.rs  error.rs  lib.rs  render.rs
crates/cli/tests/: cli.rs  compile.rs
crates/diagnostic/: Cargo.toml
crates/diagnostic/src/: code.rs  diagnostic.rs  label.rs  lib.rs  phase.rs  severity.rs
crates/diagnostic/tests/: diagnostic.rs
crates/engine/: Cargo.toml
crates/engine/src/: dag.rs  error.rs  interpolate.rs  lib.rs  path_lookup.rs  planner.rs  probe.rs  process.rs  resolve.rs  runtime.rs  shell.rs
crates/engine/tests/: interpolate.rs  planner.rs  runtime.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: diagnostics.rs  document_snapshot.rs  folding.rs  hover.rs  lib.rs  main.rs  position.rs  protocol.rs  server.rs  state.rs  symbols.rs
crates/lsp/tests/: diagnostics.rs  snapshot.rs  state.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: analysis.rs  ast.rs  document_symbols.rs  folding.rs  hover.rs  interpolation.rs  lib.rs  lower.rs  names.rs  semantic_snapshot.rs  symbols.rs  validate.rs
crates/semantic/tests/: analysis.rs  editor.rs  lower.rs  symbols.rs  validate.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast_view.rs  builder.rs  cst.rs  cursor.rs  kind.rs  lex.rs  lib.rs  parse.rs  recover.rs  syntax_snapshot.rs  token.rs  trivia.rs
crates/syntax/tests/: cst.rs  lex.rs  parse.rs  recover.rs
docs/: .gitignore  usage.md
docs/plans/: STRUCT.md
examples/: Onlyfile
src/: lib.rs  main.rs
src/cli/: app.rs  args.rs  dispatch.rs  mod.rs
src/config/: discover.rs
src/diagnostic/: error.rs
src/model/: directive.rs  mod.rs  namespace.rs  probe.rs  span.rs  task.rs
src/parser/: grammar.rs  lexer.rs  mod.rs  validate.rs
src/planner/: dag.rs  mod.rs  resolve.rs
src/runtime/: engine.rs  interpolate.rs  mod.rs  probe.rs  process.rs
src/support/: fs.rs  path.rs
tests/: parse.rs  planner.rs  planner_resolve.rs  runtime.rs
