[package]
name = "only"
version = "0.0.1"
edition = "2024"
description = "A minimalist, deterministic task runner. (Work in progress)"
license = "MIT"
repository = "https://github.com/KercyDing/only"
documentation = "https://github.com/KercyDing/only"
categories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["onlyfile", "task", "runner", "minimalist", "cli"]

readme = "README.md"

[lib]
name = "only"
path = "src/lib.rs"

[[bin]]
name = "only"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["color", "std"] }
miette = { version = "7.6", features = ["fancy"] }
anstyle = "1.0"
