[workspace]
members = [
    "crates/diagnostic",
    "crates/cli",
    "crates/syntax",
    "crates/semantic",
    "crates/engine",
    "crates/lsp",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/KercyDing/only"
documentation = "https://github.com/KercyDing/only"
readme = "README.md"

[workspace.dependencies]
anstyle = "1.0"
clap = { version = "4.5", features = ["color", "std"] }
deno_task_shell = "0.29"
logos = "0.16"
miette = { version = "7.6", features = ["fancy"] }
rowan = "0.16"
smol_str = "0.3"
text-size = "1.1"
tokio = { version = "1", features = ["rt"] }
winnow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
