[package]
name = "only"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description = "A deterministic cross-platform task runner built on a staged language pipeline."
categories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["onlyfile", "task", "runner", "minimalist", "cli"]

[lib]
name = "only"
path = "src/lib.rs"

[[bin]]
name = "only"
path = "src/main.rs"

[dependencies]
anstyle.workspace = true
clap.workspace = true
deno_task_shell.workspace = true
miette.workspace = true
only-diagnostic = { version = "0.0.3", path = "../diagnostic" }
only-engine = { version = "0.0.3", path = "../engine" }
only-semantic = { version = "0.0.3", path = "../semantic" }
tokio.workspace = true
