[package]
name = "only-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
publish = false

[dependencies]
deno_task_shell.workspace = true
only-semantic = { path = "../semantic" }
tokio.workspace = true
