[package]
name = "only-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
publish = false

[dependencies]
only-diagnostic = { path = "../diagnostic" }
only-semantic = { path = "../semantic" }
only-syntax = { path = "../syntax" }
text-size.workspace = true
