[package]
name = "only-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Semantic analysis for the only task language."

[dependencies]
only-diagnostic = { version = "0.0.3", path = "../diagnostic" }
only-syntax = { version = "0.0.3", path = "../syntax" }
smol_str.workspace = true
text-size.workspace = true
