[package]
name = "only-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Syntax parsing and CST construction for the only task language."

[dependencies]
logos.workspace = true
only-diagnostic = { version = "0.0.3", path = "../diagnostic" }
rowan.workspace = true
smol_str.workspace = true
text-size.workspace = true
winnow.workspace = true
